[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/textures/turret-firing.png" type="Texture" id=1]
[ext_resource path="res://objects/Bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/Turret.gd" type="Script" id=3]
[ext_resource path="res://objects/ProgrammableBehaviour.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/textures/turret-orange.png" type="Texture" id=5]
[ext_resource path="res://objects/Gun.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/textures/turret-base.png" type="Texture" id=7]
[ext_resource path="res://assets/textures/turret-dark.png" type="Texture" id=8]

[sub_resource type="StreamTexture" id=1]
flags = 4

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 5 ), SubResource( 1 ) ],
"loop": false,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "fire",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 95.063
height = 0.0265656

[node name="Turret" type="Area2D" groups=[
"Turret",
]]
scale = Vector2( 0.5, 0.5 )
z_index = 21
z_as_relative = false
script = ExtResource( 3 )
Bullet = ExtResource( 2 )
can_move = false

[node name="SensorCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 8000, 0 )
collision_mask = 2048
collide_with_areas = true
collide_with_bodies = false

[node name="SensorLine" type="Line2D" parent="."]
points = PoolVector2Array( 160, 0, 8000, 0 )
width = 5.0
default_color = Color( 0.627451, 0.152941, 0.152941, 0.705882 )
antialiased = true

[node name="TurretBase" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 70 )
texture = ExtResource( 7 )

[node name="Gun" parent="." instance=ExtResource( 6 )]

[node name="ProgrammableBehaviour" parent="." instance=ExtResource( 4 )]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 35.5975, -0.843132 )
rotation = 1.5708
frames = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.594574, 0 )
shape = SubResource( 3 )
[connection signal="input_event" from="." to="." method="_on_Turret_input_event"]
[connection signal="code_error" from="ProgrammableBehaviour" to="." method="_on_ProgrammableBehaviour_code_error"]
[connection signal="fire" from="ProgrammableBehaviour" to="." method="_on_ProgrammableBehaviour_fire"]
[connection signal="move" from="ProgrammableBehaviour" to="." method="_on_ProgrammableBehaviour_move"]
[connection signal="rotate" from="ProgrammableBehaviour" to="." method="_on_ProgrammableBehaviour_rotate"]
[connection signal="sensor_detect" from="ProgrammableBehaviour" to="." method="_on_ProgrammableBehaviour_sensor_detect"]
[connection signal="sleep" from="ProgrammableBehaviour" to="." method="_on_ProgrammableBehaviour_sleep"]
[connection signal="turret_position" from="ProgrammableBehaviour" to="." method="_on_ProgrammableBehaviour_turret_position"]
